// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration Tests OHQ 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "name": "RELEASE_NAME-django-asgi",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "name": "RELEASE_NAME-django-asgi",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "name": "RELEASE_NAME-django-asgi",
      },
      "name": "RELEASE_NAME-django-asgi",
      "namespace": "default",
    },
    "spec": Object {
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "name": "RELEASE_NAME-django-asgi",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "name": "RELEASE_NAME-django-asgi",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "/usr/local/bin/asgi-run",
              ],
              "env": Array [
                Object {
                  "name": "DJANGO_SETTINGS_MODULE",
                  "value": "officehoursqueue.settings.production",
                },
                Object {
                  "name": "REDIS_URL",
                  "value": "redis://office-hours-queue-redis:6379",
                },
                Object {
                  "name": "DOMAIN",
                  "value": "ohq.io",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "office-hours-queue",
                  },
                },
              ],
              "image": "pennlabs/office-hours-queue-backend",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1beta1",
    "kind": "Ingress",
    "metadata": Object {
      "name": "RELEASE_NAME-django-asgi",
      "namespace": "default",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "ohq.io",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-django-asgi",
                  "servicePort": 80,
                },
                "path": "/api/ws",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "ohq.io",
          ],
          "secretName": "ohq-io-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1alpha2",
    "kind": "Certificate",
    "metadata": Object {
      "name": "ohq-io-tls",
    },
    "spec": Object {
      "dnsNames": Array [
        "ohq.io",
        "*.ohq.io",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "ohq-io-tls",
    },
  },
  Object {
    "apiVersion": "batch/v1beta1",
    "kind": "CronJob",
    "metadata": Object {
      "labels": Object {
        "name": "RELEASE_NAME-calculate-waits",
      },
      "name": "RELEASE_NAME-calculate-waits",
      "namespace": "default",
    },
    "spec": Object {
      "failedJobsHistoryLimit": 1,
      "jobTemplate": Object {
        "spec": Object {
          "template": Object {
            "spec": Object {
              "containers": Array [
                Object {
                  "command": Array [
                    "python",
                    "manage.py",
                    "calculatewaittimes",
                  ],
                  "envFrom": Array [
                    Object {
                      "secretRef": Object {
                        "name": "office-hours-queue",
                      },
                    },
                  ],
                  "image": "pennlabs/office-hours-queue-backend",
                  "imagePullPolicy": "IfNotPresent",
                  "name": "worker",
                  "ports": Array [
                    Object {
                      "containerPort": 80,
                    },
                  ],
                },
              ],
              "restartPolicy": "Never",
            },
          },
        },
      },
      "schedule": "*/5 * * * *",
      "successfulJobsHistoryLimit": 1,
    },
  },
]
`;

exports[`Integration Tests Penn Basics 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "name": "RELEASE_NAME-react",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "name": "RELEASE_NAME-react",
      },
      "name": "RELEASE_NAME-react",
      "namespace": "default",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "name": "RELEASE_NAME-react",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "name": "RELEASE_NAME-react",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "PORT",
                  "value": "80",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "penn-basics",
                  },
                },
              ],
              "image": "pennlabs/penn-basics",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1beta1",
    "kind": "Ingress",
    "metadata": Object {
      "name": "RELEASE_NAME-react",
      "namespace": "default",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "pennbasics.com",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-react",
                  "servicePort": 80,
                },
                "path": "/",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "pennbasics.com",
          ],
          "secretName": "pennbasics-com-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1alpha2",
    "kind": "Certificate",
    "metadata": Object {
      "name": "pennbasics-com-tls",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennbasics.com",
        "*.pennbasics.com",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennbasics-com-tls",
    },
  },
]
`;

exports[`Integration Tests Penn Clubs 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "name": "RELEASE_NAME-django-asgi",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "name": "RELEASE_NAME-django-asgi",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "name": "RELEASE_NAME-django-asgi",
      },
      "name": "RELEASE_NAME-django-asgi",
      "namespace": "default",
    },
    "spec": Object {
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "name": "RELEASE_NAME-django-asgi",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "name": "RELEASE_NAME-django-asgi",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "/usr/local/bin/asgi-run",
              ],
              "env": Array [
                Object {
                  "name": "DJANGO_SETTINGS_MODULE",
                  "value": "pennclubs.settings.production",
                },
                Object {
                  "name": "REDIS_HOST",
                  "value": "penn-clubs-redis",
                },
                Object {
                  "name": "DOMAIN",
                  "value": "pennclubs.com",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "penn-clubs",
                  },
                },
              ],
              "image": "pennlabs/penn-clubs-backend",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1beta1",
    "kind": "Ingress",
    "metadata": Object {
      "name": "RELEASE_NAME-django-asgi",
      "namespace": "default",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "pennclubs.com",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-django-asgi",
                  "servicePort": 80,
                },
                "path": "/api/ws",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "pennclubs.com",
          ],
          "secretName": "pennclubs-com-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1alpha2",
    "kind": "Certificate",
    "metadata": Object {
      "name": "pennclubs-com-tls",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennclubs.com",
        "*.pennclubs.com",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennclubs-com-tls",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "name": "RELEASE_NAME-react",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "name": "RELEASE_NAME-react",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "name": "RELEASE_NAME-react",
      },
      "name": "RELEASE_NAME-react",
      "namespace": "default",
    },
    "spec": Object {
      "replicas": 2,
      "selector": Object {
        "matchLabels": Object {
          "name": "RELEASE_NAME-react",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "name": "RELEASE_NAME-react",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "PORT",
                  "value": "80",
                },
                Object {
                  "name": "DOMAIN",
                  "value": "pennclubs.com",
                },
              ],
              "image": "pennlabs/penn-clubs-frontend",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1beta1",
    "kind": "Ingress",
    "metadata": Object {
      "name": "RELEASE_NAME-react",
      "namespace": "default",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "pennclubs.com",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-react",
                  "servicePort": 80,
                },
                "path": "/",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "pennclubs.com",
          ],
          "secretName": "pennclubs-com-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1alpha2",
    "kind": "Certificate",
    "metadata": Object {
      "name": "pennclubs-com-tls",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennclubs.com",
        "*.pennclubs.com",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennclubs-com-tls",
    },
  },
]
`;

exports[`Integration Tests Penn Courses 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "name": "RELEASE_NAME-backend",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "name": "RELEASE_NAME-backend",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "name": "RELEASE_NAME-backend",
      },
      "name": "RELEASE_NAME-backend",
      "namespace": "default",
    },
    "spec": Object {
      "replicas": 3,
      "selector": Object {
        "matchLabels": Object {
          "name": "RELEASE_NAME-backend",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "name": "RELEASE_NAME-backend",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "celery",
                "worker",
                "-A",
                "PennCourses",
                "-Q",
                "alerts,celery",
                "-linfo",
              ],
              "env": Array [
                Object {
                  "name": "PORT",
                  "value": "80",
                },
                Object {
                  "name": "DJANGO_SETTINGS_MODULE",
                  "value": "PennCourses.settings.production",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "penn-courses",
                  },
                },
              ],
              "image": "pennlabs/penn-courses-backend",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1beta1",
    "kind": "Ingress",
    "metadata": Object {
      "name": "RELEASE_NAME-backend",
      "namespace": "default",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "penncourseplan.com",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/api",
              },
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/admin",
              },
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/accounts",
              },
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/assets",
              },
            ],
          },
        },
        Object {
          "host": "penncoursealert.com",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/api",
              },
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/admin",
              },
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/accounts",
              },
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/assets",
              },
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/webhook",
              },
            ],
          },
        },
        Object {
          "host": "review.penncourses.org",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/api",
              },
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/admin",
              },
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/accounts",
              },
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-backend",
                  "servicePort": 80,
                },
                "path": "/assets",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "penncourseplan.com",
          ],
          "secretName": "penncourseplan-com-tls",
        },
        Object {
          "hosts": Array [
            "penncoursealert.com",
          ],
          "secretName": "penncoursealert-com-tls",
        },
        Object {
          "hosts": Array [
            "review.penncourses.org",
          ],
          "secretName": "penncourses-org-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1alpha2",
    "kind": "Certificate",
    "metadata": Object {
      "name": "penncourseplan-com-tls",
    },
    "spec": Object {
      "dnsNames": Array [
        "penncourseplan.com",
        "*.penncourseplan.com",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "penncourseplan-com-tls",
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1alpha2",
    "kind": "Certificate",
    "metadata": Object {
      "name": "penncoursealert-com-tls",
    },
    "spec": Object {
      "dnsNames": Array [
        "penncoursealert.com",
        "*.penncoursealert.com",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "penncoursealert-com-tls",
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1alpha2",
    "kind": "Certificate",
    "metadata": Object {
      "name": "penncourses-org-tls",
    },
    "spec": Object {
      "dnsNames": Array [
        "penncourses.org",
        "*.penncourses.org",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "penncourses-org-tls",
    },
  },
]
`;

exports[`Integration Tests Penn Labs Website 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "name": "RELEASE_NAME-serve",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "name": "RELEASE_NAME-serve",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "name": "RELEASE_NAME-serve",
      },
      "name": "RELEASE_NAME-serve",
      "namespace": "default",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "name": "RELEASE_NAME-serve",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "name": "RELEASE_NAME-serve",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "image": "pennlabs/website",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1beta1",
    "kind": "Ingress",
    "metadata": Object {
      "name": "RELEASE_NAME-serve",
      "namespace": "default",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "pennlabs.org",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-serve",
                  "servicePort": 80,
                },
                "path": "/",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "pennlabs.org",
          ],
          "secretName": "pennlabs-org-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1alpha2",
    "kind": "Certificate",
    "metadata": Object {
      "name": "pennlabs-org-tls",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennlabs.org",
        "*.pennlabs.org",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennlabs-org-tls",
    },
  },
]
`;

exports[`Integration Tests Platform API 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "name": "RELEASE_NAME-platform",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 443,
          "targetPort": 443,
        },
      ],
      "selector": Object {
        "name": "RELEASE_NAME-platform",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "name": "RELEASE_NAME-platform",
      },
      "name": "RELEASE_NAME-platform",
      "namespace": "default",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "name": "RELEASE_NAME-platform",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "name": "RELEASE_NAME-platform",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "DJANGO_SETTINGS_MODULE",
                  "value": "Platform.settings.production",
                },
                Object {
                  "name": "DOMAIN",
                  "value": "platform.pennlabs.org",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "platform",
                  },
                },
              ],
              "image": "pennlabs/platform",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 443,
                },
              ],
              "volumeMounts": Array [
                Object {
                  "mountPath": "/etc/shibboleth/sp-cert.pem",
                  "name": "platform",
                  "subPath": "SHIBBOLETH_CERT",
                },
                Object {
                  "mountPath": "/etc/shibboleth/sp-key.pem",
                  "name": "platform",
                  "subPath": "SHIBBOLETH_KEY",
                },
              ],
            },
          ],
          "volumes": Array [
            Object {
              "name": "platform-shibboleth-cert",
              "secret": Object {
                "items": Array [
                  Object {
                    "key": "SHIBBOLETH_CERT",
                    "path": "SHIBBOLETH_CERT",
                  },
                ],
                "secretName": "platform",
              },
            },
            Object {
              "name": "platform-shibboleth-key",
              "secret": Object {
                "items": Array [
                  Object {
                    "key": "SHIBBOLETH_KEY",
                    "path": "SHIBBOLETH_KEY",
                  },
                ],
                "secretName": "platform",
              },
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1beta1",
    "kind": "Ingress",
    "metadata": Object {
      "name": "RELEASE_NAME-platform",
      "namespace": "default",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "platform.pennlabs.org",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "serviceName": "RELEASE_NAME-platform",
                  "servicePort": 443,
                },
                "path": "/",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "platform.pennlabs.org",
          ],
          "secretName": "pennlabs-org-tls",
        },
      ],
    },
  },
  Object {
    "apiVersion": "cert-manager.io/v1alpha2",
    "kind": "Certificate",
    "metadata": Object {
      "name": "pennlabs-org-tls",
    },
    "spec": Object {
      "dnsNames": Array [
        "pennlabs.org",
        "*.pennlabs.org",
      ],
      "issuerRef": Object {
        "group": "cert-manager.io",
        "kind": "ClusterIssuer",
        "name": "wildcard-letsencrypt-prod",
      },
      "secretName": "pennlabs-org-tls",
    },
  },
]
`;

exports[`Unit Tests Autoscaling 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "name": "RELEASE_NAME-serve",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "name": "RELEASE_NAME-serve",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "name": "RELEASE_NAME-serve",
      },
      "name": "RELEASE_NAME-serve",
      "namespace": "default",
    },
    "spec": Object {
      "selector": Object {
        "matchLabels": Object {
          "name": "RELEASE_NAME-serve",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "name": "RELEASE_NAME-serve",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "image": "pennlabs/website",
              "imagePullPolicy": "IfNotPresent",
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "autoscaling/v2beta2",
    "kind": "HorizontalPodAutoscaler",
    "metadata": Object {
      "name": "RELEASE_NAME-serve",
    },
    "spec": Object {
      "maxReplicas": 10,
      "metrics": Array [
        Object {
          "resource": Object {
            "name": "cpu",
            "target": Object {
              "averageUtilization": 80,
              "type": "Utilization",
            },
          },
          "type": "Resource",
        },
        Object {
          "resource": Object {
            "name": "memory",
            "target": Object {
              "averageValue": 80,
              "type": "AverageValue",
            },
          },
          "type": "Resource",
        },
        Object {
          "pods": Object {
            "metric": Object {
              "name": "http_requests",
            },
            "target": Object {
              "averageValue": 80,
              "type": "AverageValue",
            },
          },
          "type": "Pod",
        },
      ],
      "minReplicas": 2,
      "scaleTargetRef": Object {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "RELEASE_NAME-serve",
      },
    },
  },
]
`;

exports[`Unit Tests Readiness/Liveliness Probes 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "name": "RELEASE_NAME-serve",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "port": 80,
          "targetPort": 80,
        },
      ],
      "selector": Object {
        "name": "RELEASE_NAME-serve",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "labels": Object {
        "name": "RELEASE_NAME-serve",
      },
      "name": "RELEASE_NAME-serve",
      "namespace": "default",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "name": "RELEASE_NAME-serve",
        },
      },
      "strategy": Object {
        "rollingUpdate": Object {
          "maxSurge": 3,
          "maxUnavailable": 0,
        },
        "type": "RollingUpdate",
      },
      "template": Object {
        "metadata": Object {
          "labels": Object {
            "name": "RELEASE_NAME-serve",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "image": "pennlabs/website",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": Object {
                "exec": Object {
                  "command": Array [
                    "test",
                    "command",
                  ],
                },
                "initialDelaySeconds": 1,
                "periodSeconds": 5,
              },
              "name": "worker",
              "ports": Array [
                Object {
                  "containerPort": 80,
                },
              ],
              "readinessProbe": Object {
                "httpGet": Object {
                  "path": "/",
                  "port": 80,
                },
                "initialDelaySeconds": 5,
                "periodSeconds": 10,
              },
            },
          ],
        },
      },
    },
  },
]
`;
